--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -39,3 +39,15 @@
     justify-content: $justify;
     @content;
 }
+
+@mixin for-phone {
+    @media screen and (max-width: v.$bp-phone) { @content; }
+}
+
+@mixin for-tablet-up {
+    @media screen and (min-width: v.$bp-tablet) { @content; }
+}
+
+@mixin for-desktop-up {
+    @media screen and (min-width: v.$bp-desktop) { @content; }
+}
