--- a/scss/abstracts/_vars.scss
+++ b/scss/abstracts/_vars.scss
@@ -1,13 +1,15 @@
 @use './functions' as f;
 
 $clr-primary: #ff7657;
+$clr-secondary: #FFD966;
 $body-bg: #121212;
 $clr-text: #fff;
 $clr-text-light: #787878;
 $clr-light-black: #161616;
 
 //bp
-$bp-tablet: f.toRem(600);
+$bp-phone: f.toRem(599);
+$bp-tablet: f.toRem(720);
 $bp-desktop: f.toRem(1000);
 
 $max-width: f.toRem(1220);
