--- a/scss/abstracts/_vars.scss
+++ b/scss/abstracts/_vars.scss
@@ -6,6 +6,11 @@ $body-bg: #121212;
 $clr-text: #fff;
 $clr-text-light: #787878;
 $clr-light-black: #161616;
+$gradient1: #E4607E;
+$gradient2: #B25D95;
+$gradient3: #765D93;
+$gradient4: #44567B;
+$gradient5: #2F4858;
 
 //bp
 $bp-phone: f.toRem(599);
