--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -2,4 +2,51 @@
 
 .hero {
     padding-block-start: 8em;
+    padding-block-end: 4em;
+    position: relative;
+
+    @include abs.for-desktop-up {
+        padding-block: 10em;
+    }
+
+    &::after {
+        content: '';
+        width: 100%;
+        max-width: abs.toRem(800);
+        aspect-ratio: 1;
+        border: 2px solid #222;
+        @include abs.absolute(top 8rem right 80%);
+        rotate: 30deg;
+        z-index: -1;
+    }
+
+    &__pattern {
+        @include abs.absolute(top 0 left 0);
+        width: 100%;
+        height: 100%;
+        display: none;
+
+        @include abs.for-tablet-up {
+            display: block;
+        }
+        
+        &::before,
+        &::after {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            right: 0;
+            width: 170px;
+            height: 140px;
+            background: abs.$clr-primary;
+            clip-path: polygon(34% 32%, 64% 46%, 100% 31%, 100% 55%, 65% 70%, 33% 56%, 0 61%, 0 39%);
+            box-shadow: 0 31px 35px rgba(0, 0, 0, .1);
+            z-index: -1;
+        }
+
+        &::after {
+            translate: 0 50%;
+        }
+
+    }
 }
