--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -66,6 +66,10 @@ a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 /* Make images easier to work with */
 img,
 picture {
