--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -13,6 +13,10 @@
     text-transform: capitalize;
     font-family: abs.$ff-bold;
     font-size: 1rem;
+
+    &:hover {
+        text-decoration: none;
+    }
 }
 
 .btn {
