--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,6 +4,8 @@
     padding-block: 2em;
     @include abs.fixed(top 0 left 0);
     width: 100%;
+    background-color: abs.$body-bg;
+    z-index: 999;
 
     &__container {
         @include abs.flex {
@@ -63,6 +65,7 @@
 
         &:hover {
             color: abs.$clr-primary;
+            text-decoration: none;
         }
     }
 }
