--- a/scss/abstracts/_vars.scss
+++ b/scss/abstracts/_vars.scss
@@ -18,6 +18,7 @@ $bp-tablet: f.toRem(720);
 $bp-desktop: f.toRem(1000);
 
 $max-width: f.toRem(1220);
+$max-width-s: f.toRem(800);
 
 // Fonts
 $ff-bold: 'Poppins-Bold';
