testing chart component

--- a/scss/abstracts/_vars.scss
+++ b/scss/abstracts/_vars.scss
@@ -29,5 +29,8 @@ $dot-width: f.toRem(100);
 $dot-height: $dot-width;
 $dot-bg: #fff;
 
+// Chart
+$chart-stroke-width: 5px;
+
 $duration: 300ms;
 $timing: ease-in-out;
