--- a/scss/base/_utitls.scss
+++ b/scss/base/_utitls.scss
@@ -20,6 +20,14 @@
     }
 }
 
+.flex {
+    display: flex;
+}
+
+.js-sb {
+    justify-content: space-between;
+}
+
 .flex-ww {
     display: flex;
     flex-wrap: wrap;
