--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -63,6 +63,7 @@ p {
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
+  color: abs.$clr-primary;
   text-decoration-skip-ink: auto;
 }
 
