--- a/scss/base/_utitls.scss
+++ b/scss/base/_utitls.scss
@@ -42,6 +42,10 @@
     justify-content: space-between;
 }
 
+.ai-center {
+    align-items: center;
+}
+
 .gap-1 {
     gap: 1em;
 }
@@ -114,6 +118,28 @@
             margin-bottom: abs.$padding-mid;
         }
     }
+}
+
+%quote {
+    font-family: 'Font Awesome 5 FREE';
+    font-size: 1.5em;
+    font-weight: 900;
+    color: abs.$clr-primary;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
+
+.quote-left::before {
+    content: '\f10d';
+    @extend %quote;
+}
+
+.quote-right::after {
+    content: '\f10e';
+    @extend %quote;
 }
 
 
