--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -44,7 +44,7 @@
         display: inline-block;
         border: 1px solid abs.$clr-text-light;
         background-color: abs.$clr-light-black;
-        border-radius: 2em;
+        border-radius: 1em;
         width: 100%;
         padding: .5em 2em;
         color: abs.$clr-text;
@@ -55,6 +55,10 @@
         &:valid {
             border-color: abs.$clr-primary;
         }
+    }
+
+    &__textarea {
+        padding-block: 0;
     }
 
     &__icon {
